force-app/main/default/objects/SMS__c/fields/Alphanumeric_Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Alphanumeric_Sender_ID__c</fullName>
    <label>Alphanumeric Sender ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>