force-app/main/default/objects/SMS__c/fields/Character_Count__c.field-meta.xml
<CustomField>
    <fullName>Character_Count__c</fullName>
    <label>Character Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>