force-app/main/default/objects/SMS__c/fields/Days_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Creation__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>