force-app/main/default/objects/SMS__c/fields/Encoding__c.field-meta.xml
<CustomField>
    <fullName>Encoding__c</fullName>
    <label>Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSM_7</fullName>
                <label>GSM 7</label>
            </value>
            <value>
                <fullName>GSM_7_Extended</fullName>
                <label>GSM 7 Extended</label>
            </value>
            <value>
                <fullName>UCS-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>