force-app/main/default/objects/SMS__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Holds messageKey</description>
    <externalId>true</externalId>
    <inlineHelpText>Holds messageKey</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>