force-app/main/default/objects/SMS__c/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <label>From Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>