force-app/main/default/objects/SMS__c/fields/Full_Response__c.field-meta.xml
<CustomField>
    <fullName>Full_Response__c</fullName>
    <label>Full Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>