force-app/main/default/objects/SMS__c/fields/Non_Standard_Characters__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Characters__c</fullName>
    <label>Non-Standard Characters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>