force-app/main/default/objects/SMS__c/fields/Related_Record_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Owner_ID__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__r.OwnerId)),
    CASESAFEID(Contact__r.OwnerId),
    IF(
        NOT(ISBLANK(Lead__r.OwnerId)),
        CASESAFEID(Lead__r.OwnerId),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Owner ID</label>
    <type>Text</type>
</CustomField>