force-app/main/default/objects/SMS__c/fields/Segments__c.field-meta.xml
<CustomField>
    <fullName>Segments__c</fullName>
    <label>Segments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>