force-app/main/default/objects/SMS__c/fields/Send_From__c.field-meta.xml
<CustomField>
    <fullName>Send_From__c</fullName>
    <label>Send From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short/Long Code</fullName>
            </value>
            <value>
                <fullName>Alphanumeric Sender ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>