force-app/main/default/objects/SMS__c/fields/Send_From_Alphanumeric_Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Send_From_Alphanumeric_Sender_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send From Alphanumeric Sender ID</label>
    <type>Checkbox</type>
</CustomField>