force-app/main/default/objects/SMS__c/fields/Send_Large_Messages__c.field-meta.xml
<CustomField>
    <fullName>Send_Large_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Large Messages?</label>
    <type>Checkbox</type>
</CustomField>