force-app/main/default/objects/SMS__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <formula>IF(
    ISPICKVAL(Direction__c, &quot;Incoming&quot;),
    IF(
        NOT(ISBLANK(Account__c)),
        Account__r.Name,
        IF(
            NOT(ISBLANK(Lead__c)),
            Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName,
            &quot;&quot;
        )
    ),
    IF(
        ISPICKVAL(Direction__c, &quot;Outgoing&quot;),
        CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender</label>
    <type>Text</type>
</CustomField>