force-app/main/default/objects/SMS__c/fields/Sender_Label__c.field-meta.xml
<CustomField>
    <fullName>Sender_Label__c</fullName>
    <formula>Sender__c &amp; 
&quot; (&quot; &amp; 
TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; 
TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; 
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp; 
TEXT(VALUE(MID(TEXT(CreatedDate), 12, 2))) &amp; &quot;:&quot; &amp; 
TEXT(VALUE(MID(TEXT(CreatedDate), 15, 2))) &amp; 
&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender Label</label>
    <type>Text</type>
</CustomField>