force-app/main/default/objects/SMS__c/fields/Sent_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_Received_Time__c</fullName>
    <label>Sent/Received Time</label>
    <type>DateTime</type>
</CustomField>