force-app/main/default/objects/SMS__c/fields/SMS_Conversation__c.field-meta.xml
<CustomField>
    <fullName>SMS_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Conversation</label>
    <referenceTo>SMS_Conversation__c</referenceTo>
    <relationshipLabel>SMS</relationshipLabel>
    <relationshipName>SMS</relationshipName>
    <type>Lookup</type>
</CustomField>