force-app/main/default/objects/SMS__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <label>To Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>