force-app/main/default/objects/SMS__c/fields/Twilio_Message__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Twilio Message</label>
    <referenceTo>TwilioSF__Message__c</referenceTo>
    <relationshipLabel>SMS</relationshipLabel>
    <relationshipName>SMS</relationshipName>
    <type>Lookup</type>
</CustomField>