force-app/main/default/objects/SMS__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to determine whether this was a custom generated SMS (An agent wrote it) or an automatically generated SMS (through e.g. Zapier)</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Manually Triggered</fullName>
            </value>
            <value>
                <fullName>AI Generated</fullName>
            </value>
            <value>
                <fullName>Booking Reminder (DK)</fullName>
                <isActive>false</isActive>
                <label>Booking Reminder (DK)</label>
            </value>
            <value>
                <fullName>Booking Reminder (SE)</fullName>
                <isActive>false</isActive>
                <label>Booking Reminder (SE)</label>
            </value>
            <value>
                <fullName>Customer Reply</fullName>
                <isActive>false</isActive>
                <label>Customer Reply</label>
            </value>
            <value>
                <fullName>Manual SMS from Account</fullName>
                <isActive>false</isActive>
                <label>Manual SMS from Account</label>
            </value>
            <value>
                <fullName>Manual SMS from Lead</fullName>
                <isActive>false</isActive>
                <label>Manual SMS from Lead</label>
            </value>
            <value>
                <fullName>Thanks for confirmation (DK)</fullName>
                <isActive>false</isActive>
                <label>Thanks for confirmation (DK)</label>
            </value>
            <value>
                <fullName>Thanks for confirmation (SE)</fullName>
                <isActive>false</isActive>
                <label>Thanks for confirmation (SE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>