force-app/main/default/objects/SMS__c/validationRules/Require_Sender_ID_when_enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Sender_ID_when_enabled</fullName>
    <active>false</active>
    <errorConditionFormula>Send_From_Alphanumeric_Sender_ID__c = TRUE &amp;&amp; ISBLANK(Alphanumeric_Sender_ID__c)</errorConditionFormula>
    <errorDisplayField>Alphanumeric_Sender_ID__c</errorDisplayField>
    <errorMessage>&quot;Alphanumeric Sender ID&quot; cannot be blank when &quot;Send From Alphanumeric Sender ID&quot; is checked.</errorMessage>
</ValidationRule>