force-app/main/default/objects/SMS__c/listViews/Danish_SMS.listView-meta.xml
<ListView>
    <fullName>Danish_SMS</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Message__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_Number__c</field>
        <operation>startsWith</operation>
        <value>+45</value>
    </filters>
    <label>Danish SMS</label>
</ListView>