force-app/main/default/objects/SMS__c/listViews/Imported_No_Owner_SMS.listView-meta.xml
<ListView>
    <fullName>Imported_No_Owner_SMS</fullName>
    <filterScope>Queue</filterScope>
    <label>Imported (No Owner)</label>
    <queue>Imported_No_Owner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>