force-app/main/default/objects/SMS__c/listViews/Incoming_Swedish_SMS.listView-meta.xml
<ListView>
    <fullName>Incoming_Swedish_SMS</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Record_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Direction__c</field>
        <operation>equals</operation>
        <value>Incoming</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>FA_SE</value>
    </filters>
    <label>Incoming Swedish SMS</label>
</ListView>