force-app/main/default/objects/SMS__c/listViews/Mathias_Playground.listView-meta.xml
<ListView>
    <fullName>Mathias_Playground</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Direction__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Is_Read__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>To_Number__c</field>
        <operation>equals</operation>
        <value>+4542455150</value>
    </filters>
    <filters>
        <field>From_Number__c</field>
        <operation>equals</operation>
        <value>+4542455150</value>
    </filters>
    <label>Mathias&apos; Playground</label>
</ListView>