force-app/main/default/objects/SMS__c/listViews/Received_Messages.listView-meta.xml
<ListView>
    <fullName>Received_Messages</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Direction__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Encoding__c</columns>
    <columns>Segments__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </filters>
    <label>Received Messages</label>
</ListView>