force-app/main/default/objects/SMS__c/listViews/Successfully_Sent_Messages.listView-meta.xml
<ListView>
    <fullName>Successfully_Sent_Messages</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Direction__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Encoding__c</columns>
    <columns>Segments__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Pending</value>
    </filters>
    <label>Successfully Sent Messages</label>
</ListView>