force-app/main/default/objects/SMS__c/listViews/Twilio_Transformations.listView-meta.xml
<ListView>
    <fullName>Twilio_Transformations</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Direction__c</columns>
    <columns>From_Number__c</columns>
    <columns>To_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Encoding__c</columns>
    <columns>Segments__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Twilio_Message__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Twilio Message Transformations</label>
</ListView>